--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Oliviaa7/tinyapp#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.1"
   }
 }
