--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.1",
